--- a/prompt_demo.Rmd
+++ b/prompt_demo.Rmd
@@ -1,4 +1,5 @@
-```{r packages}
+```{r packages, message=FALSE, warning=FALSE, eval=FALSE}
+
 # Load packages
 library(tidyverse)
 library(scales)
@@ -14,11 +15,11 @@ library(cowplot)
 library(ggforce)
 library(ggsignif)
 library(stringr)
-
+library(here)
 ```
 
 
-```{r read data}
+```{r read data, message=FALSE, warning=FALSE, eval=FALSE}
 # Read the csv files into R dataframes
 
 # Climate Change
@@ -55,7 +56,7 @@ ggplot(plot_data, aes(x = reorder(column, -percentage_true), y = percentage_true
   geom_bar(stat = "identity", fill = "steelblue", width = 0.8, position = "identity") +
   coord_flip() +
   labs(y = "Percentage of Observations", x = "Behavior", title = "Percentage of Squirrels Exhibiting Various Behaviors") +
-  geom_vline(xintercept = c(10, 20, 30, 40), linetype="solid", color = "black", size=0.2) +
+  geom_vline(xintercept = c(10, 20, 30, 40), linetype="solid", color = "black", linewidth=0.2) +
   theme_minimal() +
   theme(
     panel.grid.major = element_blank(),
