--- a/prompt_demo.Rmd
+++ b/prompt_demo.Rmd
@@ -1,3 +1,15 @@
+---
+title: "Prompt Demo"
+author: "Carlo"
+date: "2023-06-29"
+output: 
+  html_document: 
+    toc: true
+    theme: flatly
+    highlight: tango
+---
+
+
 ```{r packages, message=FALSE, warning=FALSE, eval=FALSE}
 
 # Load packages
